<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo_verbose"
        android:titleCondensed="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/save_verbose"
        android:titleCondensed="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/load_verbose"
        android:titleCondensed="@string/load"
        app:showAsAction="ifRoom" />

</menu>