<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaintActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.bmw170030.fingerpaints.Views.FollowView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        app:layout_constraintBottom_toTopOf="@id/red_button"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/red_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onRedClick"
        android:src="@mipmap/red_circle"
        android:contentDescription="@string/pred"
        app:layout_constraintBottom_toTopOf="@id/size_slider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/left_vertical_divider" />

    <ImageView
        android:id="@+id/blue_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onBlueClick"
        android:src="@mipmap/blue_circle"
        android:contentDescription="@string/pblue"
        app:layout_constraintBottom_toTopOf="@id/size_slider"
        app:layout_constraintLeft_toRightOf="@id/left_vertical_divider"
        app:layout_constraintRight_toLeftOf="@id/mid_vertical_divider" />

    <ImageView
        android:id="@+id/green_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onGreenClick"
        android:src="@mipmap/green_circle"
        android:contentDescription="@string/pgreen"
        app:layout_constraintBottom_toTopOf="@id/size_slider"
        app:layout_constraintLeft_toRightOf="@id/mid_vertical_divider"
        app:layout_constraintRight_toLeftOf="@id/right_vertical_divider" />

    <ImageView
        android:id="@+id/black_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onBlackClick"
        android:src="@mipmap/black_circle"
        android:contentDescription="@string/pblack"
        app:layout_constraintBottom_toTopOf="@id/size_slider"
        app:layout_constraintLeft_toRightOf="@id/right_vertical_divider"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:text="@string/undo"
        android:onClick="onClickUndo" /> -->

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/size_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="3.0"
        android:stepSize="1.0"
        android:valueTo="20.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/mid_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/left_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/mid_vertical_divider"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/right_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/mid_vertical_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>